@@ -1,5 +1,6 @@
 0.4.0 - Released with KDE 4.2.0
 ------------------------------------------------------------------------
+- Updated to libraw 0.6.8 : changes in QuickTake 100 files processing.                                        
 - Updated to libraw 0.6.7 : Added support for Samsung S85.                                        
                             Changes in external jpeg (metadata) processing.
 - Updated to LibRaw 0.6.6 : Changes in Panasonic FZ50 files processing.
